--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,13 +23,16 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x PermissionManager/gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: PermissionManager/gradlew build
       
     - name: Download dependencies
-      run: ./gradlew dependencies --stacktrace
+      run: PermissionManager/gradlew dependencies --stacktrace
 
     - name: Build Debug APK
-      run: ./gradlew assembleDebug --stacktrace
+      run: PermissionManager/gradlew assembleDebug --stacktrace
+
+    - name: Build Release APK
+      run: PermissionManager/gradlew assembleRelease --stacktrace
 
     - name: Upload Debug APK
       uses: actions/upload-artifact@v3
@@ -38,7 +41,7 @@ jobs:
         path: SKRoot-linuxKernelRoot/PermissionManager/app/build/outputs/apk/debug/*.apk
 
     - name: Build Release APK
-      run: ./gradlew assembleRelease --stacktrace
+      run: PermissionManager/gradlew assembleRelease --stacktrace
 
     - name: Upload Release APK
       uses: actions/upload-artifact@v3
