--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,8 +21,8 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
-      run: chmod +x SKRoot-linuxKernelRoot/PermissionManager/gradlew
-      working-directory: SKRoot-linuxKernelRoot/PermissionManager
+      run: chmod +x PermissionManager/gradlew
+      working-directory: SKRoot-linuxKernelRoot
 
     - name: Build with Gradle
       run: ./gradlew build
