--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Build with Gradle
       run: PermissionManager/gradlew build
-      working-directory: PermissionManager
+      working-directory: ./
 
     - name: Download dependencies
       run: PermissionManager/gradlew dependencies --stacktrace
