--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,11 +21,11 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
-      run: chmod +x PermissionManager/gradlew
+      run: cd SKRoot-linuxKernelRoot/PermissionManager && chmod +x PermissionManager/gradlew
 
     - name: Build with Gradle
       run: PermissionManager/gradlew build
-      working-directory: ./
+    
 
     - name: Download dependencies
       run: PermissionManager/gradlew dependencies --stacktrace
