--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: set up JDK 11
+    - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
         java-version: '11'
@@ -23,34 +23,26 @@ jobs:
     - name: Grant execute permission for gradlew
       run: cd PermissionManager/ && chmod +x ./gradlew
 
-    - name: Build with Gradle
-      run: ./gradlew build
-    
-
     - name: Download dependencies
-      run: ./gradlew dependencies --stacktrace
+      run: cd PermissionManager/ && ./gradlew dependencies --stacktrace
 
+    - name: Build with Gradle
+      run: cd PermissionManager/ && ./gradlew build --stacktrace
 
     - name: Build Debug APK
-      run: ./gradlew assembleDebug --stacktrace
-
+      run: cd PermissionManager/ && ./gradlew assembleDebug --stacktrace
 
     - name: Build Release APK
-      run: ./gradlew assembleRelease --stacktrace
-
+      run: cd PermissionManager/ && ./gradlew assembleRelease --stacktrace
 
     - name: Upload Debug APK
       uses: actions/upload-artifact@v3
       with:
         name: debug-apk
-        path: ./app/build/outputs/apk/debug/*.apk
-
-    - name: Build Release APK
-      run: ./gradlew assembleRelease --stacktrace
-
+        path: PermissionManager/app/build/outputs/apk/debug/*.apk
 
     - name: Upload Release APK
       uses: actions/upload-artifact@v3
       with:
         name: release-apk
-        path: ./PermissionManager/app/build/outputs/apk/release/*.apk
+        path: PermissionManager/app/build/outputs/apk/release/*.apk
